--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!-- Write your code below -->
+<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="portfolio.css">
+</head>
+<body>  
+    <h1>Praveen Chetkuri</h1>
+    <h2>I'm a Web Developer</h2>
+    <img src="./Images/port1.jpg" height="200px"/>
+    <hr />
+
+    <!-- Education -->
+    <h2>Education</h2> 
+    <a href="../1. Education/vce.html"><h3>Bachelor's</h3></a>
+    <a href="../1. Education/unt.html"><h3>Master's</h3></a>
+
+    <h2>Projects</h2>
+    <a href="../3.4 Birthday Invite Project/solution.html"><h3>Birthday Invitation Project</h3></a> <br />
+    <img src="../3.4 Birthday Invite Project/b'day.PNG" alt="B'day Invitation" height="400px"/>
+    <hr />
+
+    <a href="../2.4 Movie Ranking Project/solution.html"><h3>Movie Ratings Project</h3></a> <br />
+    <img src="../2.4 Movie Ranking Project/goal.png" height="300px" alt="movie ratings" />
+    <hr />
+
+    <!-- TODO 7: Add the Contact Me and About Me page links -->
+    <a href="../4.1+Webpages/public/about.html">About me</a>
+    <a href="../4.1+Webpages/public/contact.html">Contact Me</a>
+</body>
+</html>
+
+<!-- HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
