--- a/unt.html
+++ b/unt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University of North Texas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../4.3 HTML Porfolio Project/portfolio.css">
 </head>
 <body>
     <!-- <a href="https://www.unt.edu/index.html">University of North Texas</a> -->
