--- a/vce.html
+++ b/vce.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vasacvi College of Engineering</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../4.3 HTML Porfolio Project/portfolio.css">
 </head>
 <body>
     <h2> Vasavi College of Engineering, Hyderabad, India</h2>
